fix igGrid header and body are misaligned in 17.2

--- a/src/css/themes/bootstrap3/yeti/modules/infragistics.ui.grid.less
+++ b/src/css/themes/bootstrap3/yeti/modules/infragistics.ui.grid.less
@@ -173,13 +173,8 @@
   border-bottom: 1px solid @table-border-color;
 }
 
-.ui-iggrid-layout-helper > tbody > tr:first-child > td,
-.ui-iggrid-layout-helper > tbody > tr:first-child > td th,
-.ui-iggrid > table > thead + tbody > tr:first-child td,
-.ui-iggrid > table > thead + tfoot + tbody > tr:first-child td
-{
-  /* border-top: 0 none!important;
- border-top removed for tables with virtualization, or headers */
+.ui-iggrid-layout-helper > tbody > tr:first-child > td th {
+  border-top: 0 !important;
 }
 
 .ui-iggrid .ui-widget-header,
@@ -189,7 +184,6 @@
   color: @text-color;
   border-color: @table-border-color;
   border-right: 1px solid @table-border-color;
-  border-left: 0 none;
 }
 
 //if the theme has dark grid headers change the image to @iggrid-icons-light
@@ -294,7 +288,7 @@
 }
 
 .ui-iggrid-headertable-mrl.ui-iggrid-headertable-mrl-scrollable {
-  border-right: 1px solid @table-border-color;
+  border-right-color: @table-border-color;
 }
 /* END 246065 */
 
